--- a/myvenv/blog/templates/blog/post_list.html
+++ b/myvenv/blog/templates/blog/post_list.html
@@ -10,9 +10,9 @@
 		<div>
 			<p>My first post</p>
 			<br>
-			<a href="https://www.naver.com/">Let's go NAVER!</a>
+			<a href="https://www.naver.com/"><img src="naver.jpg"/><br>Let's go NAVER!</a>
 			<br><br>
-			<a href="https://klas.khu.ac.kr/">Let's go KLAS!</a>
+			<a href="https://klas.khu.ac.kr/"><img src="KLAS.jpg"/><br>Let's go KLAS!</a>
 		</div>
 	</body>
 </html>
