--- a/myvenv/blog/templates/blog/post_list.html
+++ b/myvenv/blog/templates/blog/post_list.html
@@ -21,17 +21,17 @@
 		<div>
 			<p>My first post</p>
 			<br>
-			<a href="https://www.google.co.kr/" target ="_blank"><img src="images/Google.jpg" width="200px" height = "100px"/><br>Let's go Google!</a>
+			<a href="https://www.google.co.kr/" target ="_blank"><img src="/static/images/Google.jpg" width="200px" height = "100px"/><br>Let's go Google!</a>
 			<input type="text" id="googleInput"/>
 			<button onclick='window.open("https://www.google.com/search?q=" + google())' id="googleButton">Search on Google</button>
 			<br><br>
-			<a href="https://www.naver.com/" target ="_blank"><img src="images/naver.jpg" width="200px" height = "100px"/><br>Let's go NAVER!</a>
+			<a href="https://www.naver.com/" target ="_blank"><img src="/static/images/naver.jpg" width="200px" height = "100px"/><br>Let's go NAVER!</a>
 			<input type="text" id="naverInput"/>
 			<button onclick='window.open("https://search.naver.com/search.naver?query=" + naver())' id="naverButton">Search on NAVER</button>
 			<br><br>
-			<a href="https://klas.khu.ac.kr/" target ="_blank"><img src="images/KLAS.jpg" width="200px" height = "100px"/><br>Let's go KLAS!</a>
+			<a href="https://klas.khu.ac.kr/" target ="_blank"><img src="/static/images/KLAS.jpg" width="200px" height = "100px"/><br>Let's go KLAS!</a>
 			<br><br>
-			<a href="https://www.youtube.com/" target ="_blank"><img src="images/YouTube.jpg" width="200px" height = "100px"/><br>Let's go YouTube!</a>
+			<a href="https://www.youtube.com/" target ="_blank"><img src="/static/images/YouTube.jpg" width="200px" height = "100px"/><br>Let's go YouTube!</a>
 			<input type="text" id="youtubeInput"/>
 			<button onclick='window.open("https://www.youtube.com/results?search_query=" + youtube())' id="youTubeButton">Search on YouTube</button>
 		</div>
