--- a/myvenv/blog/templates/blog/post_list.html
+++ b/myvenv/blog/templates/blog/post_list.html
@@ -1,6 +1,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta property="og:title" content="HANJU">
+		<meta property="og:image" content="http://kimhanju.pythonanywhere.com/static/images/hanju.JPG">
 		<title>Kimhanju's First Django Blog</title>
 	</head>
 	<body>
