ADD thumbnail meta tag

--- a/myvenv/blog/templates/blog/post_list.html
+++ b/myvenv/blog/templates/blog/post_list.html
@@ -1,8 +1,11 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta property="go:url" content="kimhanju.pythonanywhere.com">
 		<meta property="og:title" content="HANJU">
+		<meta property="og:type" content="website">
 		<meta property="og:image" content="http://kimhanju.pythonanywhere.com/static/images/hanju.JPG">
+		<meta property="og:description" content="한주의 블로그">
 		<title>Kimhanju's First Django Blog</title>
 	</head>
 	<body>
