--- a/myvenv/blog/templates/blog/post_list.html
+++ b/myvenv/blog/templates/blog/post_list.html
@@ -4,8 +4,8 @@
 		<meta property="go:url" content="kimhanju.pythonanywhere.com">
 		<meta property="og:title" content="HANJU">
 		<meta property="og:type" content="website">
-		<meta property="og:image" content="https://kimhanju.pythonanywhere.com/static/images/hanju.jpg" width="100%" height="100%"/>
-		<meta property="og:description" content="한주의 블로그">
+		<meta property="og:image" content="http://kimhanju.pythonanywhere.com/static/images/hanju.jpg" width="100%" height="100%"/>
+		<meta property="og:description" content="한주의 블로그2">
 		<title>Kimhanju's First Django Blog</title>
 	</head>
 	<body>
