--- a/myvenv/blog/templates/blog/myportal.html
+++ b/myvenv/blog/templates/blog/myportal.html
@@ -9,20 +9,112 @@
 		<meta property="og:image" content="{% static 'images/myportal_logo.jpg' %}">
 		<meta property="og:description" content="사용자가 만드는 포털, 마이포털">
 		<style>
+
+		#wrapper {
+			height: 1000px;
+			width: 850px;
+		}
+
 		.linkbox {
+			position: absolute;
+			z-index: 9;
 			height: 150px;
 			width: 500px;
-			display: inline-block;
+			display: none;
+			z-index: 9;
+		}
+
+		.linkboxheader {
+			padding: 10px;
+   			cursor: move;
+    		z-index: 10;
+    		background-color: #2196F3;
+    		color: #fff;
 		}
 
 		#openmenu {
 			float: right;
 		}
+
+		#closemenu {
+			float: right;
+			display: none;
+		}
+
+		#menubox {
+			float: right;
+			background-color: lightgray;
+			width: 300px;
+			height: 1000px;
+			margin-top: -950px;
+			display: none;
+		}
+
+		.smallbox {
+			margin: 20px;
+			width: 80px;
+			height: 60px;
+		}
+
 		</style>
 		<title>MyPortal</title>
 	</head>
 	<body>
-		<script>
+		<div class="page-header" style="text-align: center">
+			<h1>MyPortal</h1>
+		</div>
+
+		<button id="openmenu" onclick="openmenu();"> < </button>
+		<button id="closemenu" onclick="closemenu();"> > </button>
+		<br>
+		<div id="wrapper">
+			<div id="googlebox" class="linkbox">
+				<div id="googleboxheader" class="linkboxheader"></div>
+				<a href="https://www.google.co.kr/" target ="_blank"><img src="{% static 'images/Google.JPG' %}" width="200px" height = "100px"/><br>Let's go Google!</a>
+				<input type="text" id="googleInput"/>
+				<button onclick='window.open("https://www.google.com/search?q=" + google())' id="googleButton">Search on Google</button>
+			</div>
+			<div id="backjoonbox" class="linkbox">
+				<div id="backjoonboxheader" class="linkboxheader"></div>
+				<a href="https://www.acmicpc.net/" target ="_blank"><img src="{% static 'images/backjoon.JPG' %}" width="200px" height = "100px"/><br>Let's go BackJoon!</a>
+				<input type="text" id="backjoonInput"/>
+				<button onclick='window.open("https://www.acmicpc.net/problem/" + backjoon())' id="backjoonButton">Go to Problem Number</button>
+			</div>
+			<br><br>
+			<div id="naverbox" class="linkbox">
+				<div id="naverboxheader" class="linkboxheader"></div>
+				<a href="https://www.naver.com/" target ="_blank"><img src="{% static 'images/naver.JPG' %}" width="200px" height = "100px"/><br>Let's go NAVER!</a>
+				<input type="text" id="naverInput"/>
+				<button onclick='window.open("https://search.naver.com/search.naver?query=" + naver())' id="naverButton">Search on NAVER</button>
+			</div>
+			<div id="calculatebox" class="linkbox">
+				<div id="calculateboxheader" class="linkboxheader"></div>
+				<a href="http://www.wolframalpha.com/" target ="_blank"><img src="{% static 'images/calculate.JPG' %}" width="200px" height = "100px"/><br>Let's do Infinitesimal Calculus!</a>
+			</div>
+			<br><br>
+			<div id="klasbox" class="linkbox">
+				<div id="klasboxheader" class="linkboxheader"></div>
+				<a href="https://klas.khu.ac.kr/" target ="_blank"><img src="{% static 'images/KLAS.JPG' %}" width="200px" height = "100px"/><br>Let's go KLAS!</a>
+			</div>
+			<br><br>
+			<div id="youtubebox" class="linkbox">
+				<div id="youtubeboxheader" class="linkboxheader"></div>
+				<a href="https://www.youtube.com/" target ="_blank"><img src="{% static 'images/YouTube.JPG' %}" width="200px" height = "100px"/><br>Let's go YouTube!</a>
+				<input type="text" id="youtubeInput"/>
+				<button onclick='window.open("https://www.youtube.com/results?search_query=" + youtube())' id="youTubeButton">Search on YouTube</button>
+			</div>
+		</div>
+		<div id="menubox">
+			<button id="google" class="smallbox" onclick="opengoogle();">google</button>
+			<button id="youtube" class="smallbox" onclick="openyoutube();">youtube</button><br>
+			<button id="backjoon" class="smallbox" onclick="openbackjoon();">backjoon</button>
+			<button id="naver" class="smallbox" onclick="opennaver();">naver</button><br>
+			<button id="calculate" class="smallbox" onclick="opencalculate();">calculate</button>
+			<button id="klas" class="smallbox" onclick="openklas();">klas</button>
+		</div>
+
+
+<script type="text/javascript">
 		function google() {
 			return document.getElementById("googleInput").value;
 		}
@@ -35,45 +127,80 @@
 		function backjoon() {
 			return document.getElementById("backjoonInput").value;
 		}
-		</script>
-		<div class="page-header" style="text-align: center">
-			<h1>MyPortal</h1>
-		</div>
+		function openmenu() {
+			document.getElementById("menubox").style.display = "inline-block";
+			document.getElementById("closemenu").style.display = "inline-block";
+			document.getElementById("openmenu").style.display = "none";
+		}
+		function closemenu() {
+			document.getElementById("menubox").style.display = "none";
+			document.getElementById("closemenu").style.display = "none";
+			document.getElementById("openmenu").style.display = "inline-block";
+		}
+		function opengoogle() {
+			document.getElementById("googlebox").style.display = "inline-block";
+		}
+		function openbackjoon() {
+			document.getElementById("backjoonbox").style.display = "inline-block";
+		}
+		function opencalculate() {
+			document.getElementById("calculatebox").style.display = "inline-block";
+		}
+		function openyoutube() {
+			document.getElementById("youtubebox").style.display = "inline-block";
+		}
+		function opennaver() {
+			document.getElementById("naverbox").style.display = "inline-block";
+		}
+		function openklas() {
+			document.getElementById("klasbox").style.display = "inline-block";
+		}
 
-		<button id="openmenu"> < </button>
+	dragElement(document.getElementById(("googlebox")));
+	dragElement(document.getElementById(("youtubebox")));
+	dragElement(document.getElementById(("backjoonbox")));
+	dragElement(document.getElementById(("naverbox")));
+	dragElement(document.getElementById(("calculatebox")));
+	dragElement(document.getElementById(("klasbox")));
 
-		<br>
-		<div>
-			<div class="linkbox">
-				<a href="https://www.google.co.kr/" target ="_blank"><img src="{% static 'images/Google.JPG' %}" width="200px" height = "100px"/><br>Let's go Google!</a>
-				<input type="text" id="googleInput"/>
-				<button onclick='window.open("https://www.google.com/search?q=" + google())' id="googleButton">Search on Google</button>
-			</div>
-			<div class="linkbox">
-				<a href="https://www.acmicpc.net/" target ="_blank"><img src="{% static 'images/backjoon.JPG' %}" width="200px" height = "100px"/><br>Let's go BackJoon!</a>
-				<input type="text" id="backjoonInput"/>
-				<button onclick='window.open("https://www.acmicpc.net/problem/" + backjoon())' id="backjoonButton">Go to Problem Number</button>
-			</div>
-			<br><br>
-			<div class="linkbox">
-				<a href="https://www.naver.com/" target ="_blank"><img src="{% static 'images/naver.JPG' %}" width="200px" height = "100px"/><br>Let's go NAVER!</a>
-				<input type="text" id="naverInput"/>
-				<button onclick='window.open("https://search.naver.com/search.naver?query=" + naver())' id="naverButton">Search on NAVER</button>
-			</div>
-			<div class="linkbox">
-				<a href="http://www.wolframalpha.com/" target ="_blank"><img src="{% static 'images/calculate.JPG' %}" width="200px" height = "100px"/><br>Let's do Infinitesimal Calculus!</a>
-			</div>
-			<br><br>
-			<div class="linkbox">
-				<a href="https://klas.khu.ac.kr/" target ="_blank"><img src="{% static 'images/KLAS.JPG' %}" width="200px" height = "100px"/><br>Let's go KLAS!</a>
-			</div>
-			<br><br>
-			<div class="linkbox">
-				<a href="https://www.youtube.com/" target ="_blank"><img src="{% static 'images/YouTube.JPG' %}" width="200px" height = "100px"/><br>Let's go YouTube!</a>
-				<input type="text" id="youtubeInput"/>
-				<button onclick='window.open("https://www.youtube.com/results?search_query=" + youtube())' id="youTubeButton">Search on YouTube</button>
-			</div>
-		</div>
-		</div>
+function dragElement(elmnt) {
+  var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
+  if (document.getElementById(elmnt.id + "header")) {
+    /* if present, the header is where you move the DIV from:*/
+    document.getElementById(elmnt.id + "header").onmousedown = dragMouseDown;
+  } else {
+    /* otherwise, move the DIV from anywhere inside the DIV:*/
+    elmnt.onmousedown = dragMouseDown;
+  }
+  function dragMouseDown(e) {
+    e = e || window.event;
+    // get the mouse cursor position at startup:
+    pos3 = e.clientX;
+    pos4 = e.clientY;
+    document.onmouseup = closeDragElement;
+    // call a function whenever the cursor moves:
+    document.onmousemove = elementDrag;
+  }
+
+  function elementDrag(e) {
+    e = e || window.event;
+    // calculate the new cursor position:
+    pos1 = pos3 - e.clientX;
+    pos2 = pos4 - e.clientY;
+    pos3 = e.clientX;
+    pos4 = e.clientY;
+    // set the element's new position:
+    elmnt.style.top = (elmnt.offsetTop - pos2) + "px";
+    elmnt.style.left = (elmnt.offsetLeft - pos1) + "px";
+  }
+
+  function closeDragElement() {
+    /* stop moving when mouse button is released:*/
+    document.onmouseup = null;
+    document.onmousemove = null;
+  }
+}
+</script>
+
 	</body>
 </html>
